[package]
name = "act2"
version = "0.1.3"
authors = ["Dimitri Wayland <dimitrischeibe@gmail.com>", "Anthony Foxclaw"]
description = "Act 2 is a simple engine for making text-based adventure games using JSON."
homepage = "https://github.com/tonytins/act2"
repository = "https://github.com/tonytins/act2"
edition = "2018"
categories = ["games", "game-development"]
keywords = ["terminal","adventure","game","engine"]
license = "MIT"

[badges]
appveyor = { repository = "tonytins/act2", branch = "master" }
travis-ci = { repository = "tonytins/act2", branch = "master" }
codecov = { repository = "tonytins/act2", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]